# daily-watchlist

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL-FOR-AI.md  README.md  pyproject.toml
.claude/commands/: dw-import.md  dw-today.md  ht-new.md  ht-status.md  ht-trade.md
.github/workflows/: install-test.yml  release.yml
config/: daily-watchlist.env.example  daily-watchlist.example.yaml  daily-watchlist.watchlist.example.md  hypothesis-tracker.env.example
scripts/: check_setup.py  fetch_macro_data.py  fetch_market_data.py  generate_daily_report.py  install.ps1  install.sh  smoke_generate_report.py  sync_hypothesis.py  trade_stats.py  workspace_paths.py
skills/: daily-watchlist-import.md  dw-today.md  ht-new.md  ht-status.md  ht-trade.md
templates/: daily-watchlist-report-template.md
tests/: test_fetch_market_data.py
